--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
 	<title>Oradellschools</title>
@@ -6,54 +7,48 @@
 
 <body>
 	<section class="schools">
-	<h1>Oradell Public School</h1>
-	<a href="Oradell School - Oradell, New Jersey.html" alt="Oradell Public School">
-	<img src="images/oradellpublicschool.jpg">
-	</a>
+		<h1>Oradell Public School</h1>
+		<a href="Oradell School-Oradell, New Jersey.html" alt="Oradell Public School"><img src="images/oradellpublicschool.jpg"></a>
 	</section>
 	<section class="schools">
-	<h1>River Dell Middle School</h1>
-	<a href="River Dell Middle School _ Overview.html" alt="River Dell Middle School">
-	<img src="images/riverdellmiddleschool.jpg">
-	</a>
+		<h1>River Dell Middle School</h1>
+		<a href="River Dell Middle School_Overview.html" alt="River Dell Middle School"><img src="images/riverdellmiddleschool.jpg"></a>
 	</section>
 	<section class="schools">
-	<h1>River Dell High School</h1>
-	<a href="River Dell High School _ Overview.html" alt="River Dell High School">
-	<img src="images/riverdellhighschool.jpg">
-	</a>
+		<h1>River Dell High School</h1>
+		<a href="River Dell High School_Overview.html" alt="River Dell High School"><img src="images/riverdellhighschool.jpg"></a>
 	</section>
-	
 	<div>
 		<section class="principal">
-		<img src="images/Meganbozios.jpg" alt="Megan Bozios">
-		<h1>Megan Bozios</h1>
-		<h2>Principal</h2>
-		<h3>Oradell Public School</h3>
+			<img src="images/Meganbozios.jpg" alt="Megan Bozios">
+			<h1>Megan Bozios</h1>
+			<h2>Principal</h2>
+			<h3>Oradell Public School</h3>
 		</section>
 		<section class="principal">
-		<img src="images/richardfreedman.jpg" alt="Richard Freedman">
-		<h1>Richard Freedman</h1>
-		<h2>Middle School Principal</h2>
+			<img src="images/richardfreedman.jpg" alt="Richard Freedman">
+			<h1>Richard Freedman</h1>
+			<h2>Middle School Principal</h2>
 		</section>
 		<section class="principal">
-		<img src="images/lorrainebrooks.JPG" alt="Lorraine Brooks">
-		<h1>Lorraine Brooks</h1>
-		<h2>High School Principal</h2>
+			<img src="images/lorrainebrooks.JPG" alt="Lorraine Brooks">
+			<h1>Lorraine Brooks</h1>
+			<h2>High School Principal</h2>
 		</section>
 	</div>
 	<div>
 		<section class="superintendent">
-		<img src="images/mattwilson.jpg" alt="Matt Wilson">
-		<h1>Matt Wilson</h1>
-		<h2>Superintendent</h2>
-		<h2>Oradell Public School District</h2>
+			<img src="images/mattwilson.jpg" alt="Matt Wilson">
+			<h1>Matt Wilson</h1>
+			<h2>Superintendent</h2>
+			<h2>Oradell Public School District</h2>
 		</section>
 		<section class="superintendent">
-		<img src="images/patrickfletcher.jpeg" width="250px" height="200px" alt="Patrick Fletcher">
-		<h1>Patrick Fletcher</h1>
-		<h2>Superintendent</h2>
-		<h2>River Dell Regional School District</h2>
+			<img src="images/patrickfletcher.jpeg" alt="Patrick Fletcher" class="fletcher">
+			<h1>Patrick Fletcher</h1>
+			<h2>Superintendent</h2>
+			<h2>River Dell Regional School District</h2>
 		</section>
 	</div>
-	</body>
+</body>
+</html>
